fix alignment of unordered list content

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -367,6 +367,8 @@ h2#bloglets ~ p {
 h2#bloglets ~ ul li p {
     display: inline-block;
     margin-block: 0.5em 0;
+}
+h2#bloglets ~ ul li p ~ p {
     margin-inline-start: 1ch;
 }
 footer {
